--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,12 +4,37 @@
 @tailwind utilities;
 
 body {
-    background-color: #e3e9e8;
-    font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
+  background-color: rgba(151, 222, 230, 0.673);
+    /* background-color: #e3e9e8; */
+    /* background-color: #96C6EA; */
+    /* font-family: "Roboto", sans-serif;
   font-weight: 100;
   font-style: normal;
-  user-select: none;
-  } 
+
+  overflow-x: hidden; */
+  /* font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal; */
+
+  /* font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal; */
+
+  /* font-family: "Tajawal", sans-serif;
+  font-weight: 500;
+  font-style: normal; */
+
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+
+} 
+
+
 
  
   
