add banner and create the responsive site and added the video

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,11 @@
 
 body {
   overflow-x: hidden;
-  background-color: rgba(151, 222, 230, 0.673);
+  /* background-color: rgba(151, 222, 230, 0.673); */
+  /* background-color: ghostwhite; */
+  /* background-color: #efece9e2; */
+  /* background-color:#f5f5dc; */
+  background-color: #ffffff;
     /* background-color: #e3e9e8; */
     /* background-color: #96C6EA; */
     /* font-family: "Roboto", sans-serif;
